Done best sellers

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main">
         <div class="nav">
             <div class="nav-left">
-                <img src="./images/logo.avif" alt="" width="100">
+                <img src="./images/logo.avif" alt="">
                 <ul>
                     <li>Home</li>
                     <li>Shop by Category</li>
@@ -46,7 +46,6 @@
         <h1 class="title">Top Categories</h1>
 
         <div class="categories">
-         
             <div class="card">
                 <img src="./images/fastfood_1500x420.webp" alt="categories">
                 <h5>Meat Alternatives</h5>
@@ -66,8 +65,43 @@
         </div>
 
         <h1 class="title">Best Sellers</h1>
+
+        <div class="best-sellers">
+            <div class="item">
+                <div class="shape-item">
+                    <img src="./images/impossible-burger-ground-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
+                    <h2>Impossible Burger - Ground</h2>
+                    <div class="nav-item">
+                        <span>$9.99</span>
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="shape-item">
+                    <img src="./images/impossible-burger-patties-2-pack-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
+                    <h2>Impossible Burger - Ground</h2>
+                    <div class="nav-item">
+                        <span>$9.99</span>
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="shape-item">
+                    <img src="./images/field-roast-buffalo-wings-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
+                    <h2>Impossible Burger - Ground</h2>
+                    <div class="nav-item">
+                        <span>$9.99</span>
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h1 class="title">Favorite Brands</h1>
+
+
     </div>
-
-
 </body>
 </html>
