Done favorite brands and inside view

--- a/index.html
+++ b/index.html
@@ -101,7 +101,33 @@
 
         <h1 class="title">Favorite Brands</h1>
 
+        <div class="favorite-brands">
+            <img src="./images/b-1_200x.avif" alt="favorite-brands">
+            <img src="./images/b-2_200x.avif" alt="favorite-brands">
+            <img src="./images/b-3_200x.webp" alt="favorite-brands">
+            <img src="./images/b-4_200x.avif" alt="favorite-brands">
+            <img src="./images/b-5_200x.avif" alt="favorite-brands">
+        </div>
 
+        <h1 class="title">Inside View</h1>
+
+        <div class="inside-view">
+            <div class="follow">
+                <i class="fab fa-instagram"></i>
+                <p>Follow us on instagram             
+                    <a href="https://www.instagram.com/foodstore/">@foodstore</a>
+                </p>
+            </div>
+            <div class="ads">
+                <img src="./images/i-1_418x.webp" alt="ads">
+                <img src="./images/i-2_418x.webp" alt="ads">
+                <img src="./images/i-3_418x.webp" alt="ads">
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <img src="./images/grass-layer.webp" alt="footer" width="100%">
     </div>
 </body>
 </html>
