--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Store</title>
+    <title>Food Store - Web được thuê code</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="./images/logo.avif" type="image/x-icon">
 </head>
 <body>
     <div class="alert">
@@ -128,6 +129,83 @@
 
     <div class="footer">
         <img src="./images/grass-layer.webp" alt="footer" width="100%">
+        <div class="nav-footer">
+            <table>
+                <tr>
+                    <th>RESOURCES</th>
+                    <th>SOCIAL</th>
+                    <th>MOST POPULAR</th>
+                    <th>NEWSLETTER</th>
+                </tr>
+                <tr>
+                    <td>About Us</td>
+                    <td>
+                        <div class="social">
+                            <i class="fab fa-facebook"></i>
+                            Facebook
+                        </div>
+                    </td>
+                    <td>Companion Animal Products</td>
+                    <td>Join Our Good News Mailing List</td>
+                </tr>
+                <tr>
+                    <td>Contact</td>
+                    <td>
+                        <div class="social">
+                            <i class="fab fa-twitter"></i>
+                            Twitter
+                        </div>
+                    </td>
+                    <td>New Products</td>
+                    <td>
+                        <input type="text" placeholder="Enter your email address">
+                    </td>
+                </tr>
+                <tr>
+                    <td>FAQ</td>
+                    <td>
+                        <div class="social">
+                            <i class="fab fa-instagram"></i>
+                            Instagram
+                        </div>
+                    </td>
+                    <td>SALE Products</td>
+                    <td>
+                        <button>Subscribe</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Suggest a Product</td>
+                    <td></td>
+                    <td>Cheese Alternatives</td>
+                </tr>
+                <tr>
+                    <td>Shipping Policy</td>
+                    <td></td>
+                    <td>Meat Alternatives</td>
+                </tr>
+                <tr>
+                    <td>Return Policy</td>
+                    <td></td>
+                    <td>Candy & Sweets</td>
+                </tr>
+                <tr>
+                    <td>Privacy Policy</td>
+                    <td></td>
+                    <td>Gift Certificates</td>
+                </tr>
+                <tr>
+                    <td>Vendor Application</td>
+                    <td></td>
+                    <td>Personal Care</td>
+                </tr>
+              </table>
+        </div>
+        
+        <div class="copyright">
+            © 2022 Copyright Vegan Essentials Online Store.
+            <img src="./images/cards.avif" alt=""payment>
+        </div>
     </div>
 </body>
 </html>
