--- a/pages/register.html
+++ b/pages/register.html
@@ -25,17 +25,17 @@
             <div class="nav-left">
                 <img src="./images/logo.avif" alt="">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Shop by Category</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Contact Us </a></li>
+                    <li>Home</li>
+                    <li>Shop by Category</li>
+                    <li>About Us</li>
+                    <li>Contact Us</li>
                     <li></li> 
                 </ul>
             </div>
             <div class="nav-right">
                 <input type="text" placeholder="Search products, brands, etc...">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <a href="./pages/login.html"><i class="fa-regular fa-user"></i></a>
+                <i class="fa-regular fa-user"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
         </div>
@@ -62,67 +62,6 @@
             <div class="card">
                 <img src="./images/animel_1500x420.webp" alt="categories">
                 <h5>Companion Animal</h5>
-            </div>
-        </div>
-
-        <h1 class="title">Best Sellers</h1>
-
-        <div class="best-sellers">
-            <div class="item">
-                <div class="shape-item">
-                    <img src="./images/impossible-burger-ground-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
-                    <h2>Impossible Burger - Ground</h2>
-                    <div class="nav-item">
-                        <span>$9.99</span>
-                        <i class="fas fa-arrow-circle-right"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="shape-item">
-                    <img src="./images/impossible-burger-patties-2-pack-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
-                    <h2>Impossible Burger - Ground</h2>
-                    <div class="nav-item">
-                        <span>$9.99</span>
-                        <i class="fas fa-arrow-circle-right"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="shape-item">
-                    <img src="./images/field-roast-buffalo-wings-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
-                    <h2>Impossible Burger - Ground</h2>
-                    <div class="nav-item">
-                        <span>$9.99</span>
-                        <i class="fas fa-arrow-circle-right"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h1 class="title">Favorite Brands</h1>
-
-        <div class="favorite-brands">
-            <img src="./images/b-1_200x.avif" alt="favorite-brands">
-            <img src="./images/b-2_200x.avif" alt="favorite-brands">
-            <img src="./images/b-3_200x.webp" alt="favorite-brands">
-            <img src="./images/b-4_200x.avif" alt="favorite-brands">
-            <img src="./images/b-5_200x.avif" alt="favorite-brands">
-        </div>
-
-        <h1 class="title">Inside View</h1>
-
-        <div class="inside-view">
-            <div class="follow">
-                <i class="fab fa-instagram"></i>
-                <p>Follow us on instagram             
-                    <a href="https://www.instagram.com/foodstore/">@foodstore</a>
-                </p>
-            </div>
-            <div class="ads">
-                <img src="./images/i-1_418x.webp" alt="ads">
-                <img src="./images/i-2_418x.webp" alt="ads">
-                <img src="./images/i-3_418x.webp" alt="ads">
             </div>
         </div>
     </div>
