--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Store</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./images/logo.avif" type="image/x-icon">
@@ -23,112 +23,25 @@
     <div class="main">
         <div class="nav">
             <div class="nav-left">
-                <img src="./images/logo.avif" alt="">
+                <img src="../images/logo.avif" alt="">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Shop by Category</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Contact Us </a></li>
+                    <li>Home</li>
+                    <li>Shop by Category</li>
+                    <li>About Us</li>
+                    <li>Contact Us</li>
                     <li></li> 
                 </ul>
             </div>
             <div class="nav-right">
                 <input type="text" placeholder="Search products, brands, etc...">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <a href="./pages/login.html"><i class="fa-regular fa-user"></i></a>
+                <i class="fa-regular fa-user"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
-            </div>
-        </div>
-
-        <div class="slide">
-            <img src="./images/banner.webp" alt="">
-        </div>
-
-        <h1 class="title">Top Categories</h1>
-
-        <div class="categories">
-            <div class="card">
-                <img src="./images/fastfood_1500x420.webp" alt="categories">
-                <h5>Meat Alternatives</h5>
-            </div>
-            <div class="card">
-                <img src="./images/cheese_1500x420.webp" alt="categories">
-                <h5>Cheese Alternatives</h5>
-            </div>
-            <div class="card">
-                <img src="./images/candy_1500x420.webp" alt="categories">
-                <h5>Candy & Sweet</h5>
-            </div>
-            <div class="card">
-                <img src="./images/animel_1500x420.webp" alt="categories">
-                <h5>Companion Animal</h5>
-            </div>
-        </div>
-
-        <h1 class="title">Best Sellers</h1>
-
-        <div class="best-sellers">
-            <div class="item">
-                <div class="shape-item">
-                    <img src="./images/impossible-burger-ground-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
-                    <h2>Impossible Burger - Ground</h2>
-                    <div class="nav-item">
-                        <span>$9.99</span>
-                        <i class="fas fa-arrow-circle-right"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="shape-item">
-                    <img src="./images/impossible-burger-patties-2-pack-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
-                    <h2>Impossible Burger - Ground</h2>
-                    <div class="nav-item">
-                        <span>$9.99</span>
-                        <i class="fas fa-arrow-circle-right"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="shape-item">
-                    <img src="./images/field-roast-buffalo-wings-vegan-essentials-online-store_200x200.avif" alt="best-sellers">
-                    <h2>Impossible Burger - Ground</h2>
-                    <div class="nav-item">
-                        <span>$9.99</span>
-                        <i class="fas fa-arrow-circle-right"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h1 class="title">Favorite Brands</h1>
-
-        <div class="favorite-brands">
-            <img src="./images/b-1_200x.avif" alt="favorite-brands">
-            <img src="./images/b-2_200x.avif" alt="favorite-brands">
-            <img src="./images/b-3_200x.webp" alt="favorite-brands">
-            <img src="./images/b-4_200x.avif" alt="favorite-brands">
-            <img src="./images/b-5_200x.avif" alt="favorite-brands">
-        </div>
-
-        <h1 class="title">Inside View</h1>
-
-        <div class="inside-view">
-            <div class="follow">
-                <i class="fab fa-instagram"></i>
-                <p>Follow us on instagram             
-                    <a href="https://www.instagram.com/foodstore/">@foodstore</a>
-                </p>
-            </div>
-            <div class="ads">
-                <img src="./images/i-1_418x.webp" alt="ads">
-                <img src="./images/i-2_418x.webp" alt="ads">
-                <img src="./images/i-3_418x.webp" alt="ads">
             </div>
         </div>
     </div>
 
     <div class="footer">
-        <img src="./images/grass-layer.webp" alt="footer" width="100%">
         <div class="nav-footer">
             <table>
                 <tr>
